# flutter_kiwi_nlp

./: .gitignore  CHANGELOG.md  LICENSE  README.en.md  README.ko.md  README.md  ffigen.yaml  llms.txt  pubspec.yaml
.github/workflows/: desktop-benchmark.yml  desktop-build.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
benchmark/: .pubignore
benchmark/results/: comparison.md  flutter_kiwi_benchmark.json  flutter_kiwi_benchmark_trial_01.json  flutter_kiwi_benchmark_trial_02.json  flutter_kiwi_benchmark_trial_03.json  flutter_kiwi_benchmark_trial_04.json  flutter_kiwi_benchmark_trial_05.json  flutter_kiwi_benchmark_trials.json  kiwipiepy_benchmark.json  kiwipiepy_benchmark_trial_01.json  kiwipiepy_benchmark_trial_02.json  kiwipiepy_benchmark_trial_03.json  kiwipiepy_benchmark_trial_04.json  kiwipiepy_benchmark_trial_05.json  kiwipiepy_benchmark_trials.json  mobile_single_batch_t3_summary_2026-02-18.md
benchmark/results/android_release/: comparison.md  flutter_kiwi_benchmark.json  flutter_kiwi_benchmark_trial_01.json  flutter_kiwi_benchmark_trial_02.json  flutter_kiwi_benchmark_trial_03.json  flutter_kiwi_benchmark_trial_04.json  flutter_kiwi_benchmark_trials.json  kiwipiepy_benchmark.json  kiwipiepy_benchmark_trial_01.json  kiwipiepy_benchmark_trial_02.json  kiwipiepy_benchmark_trial_03.json  kiwipiepy_benchmark_trial_04.json  kiwipiepy_benchmark_trials.json
benchmark/results/android_release_t10/: comparison.md  flutter_kiwi_benchmark.json  flutter_kiwi_benchmark_trial_01.json  flutter_kiwi_benchmark_trial_02.json  flutter_kiwi_benchmark_trial_03.json  flutter_kiwi_benchmark_trial_04.json  flutter_kiwi_benchmark_trial_05.json  flutter_kiwi_benchmark_trial_06.json  flutter_kiwi_benchmark_trial_07.json  flutter_kiwi_benchmark_trial_08.json  flutter_kiwi_benchmark_trial_09.json  flutter_kiwi_benchmark_trials.json  kiwipiepy_benchmark.json  kiwipiepy_benchmark_trial_01.json  kiwipiepy_benchmark_trial_02.json  kiwipiepy_benchmark_trial_03.json  kiwipiepy_benchmark_trial_04.json  kiwipiepy_benchmark_trial_05.json  kiwipiepy_benchmark_trial_06.json  kiwipiepy_benchmark_trial_07.json  kiwipiepy_benchmark_trial_08.json  kiwipiepy_benchmark_trial_09.json  kiwipiepy_benchmark_trials.json
benchmark/results/android_release_t1_token_count_s10_smoke/: comparison.md  flutter_kiwi_benchmark_trial_01.json  flutter_kiwi_benchmark_trials.json  kiwipiepy_benchmark_trial_01.json  kiwipiepy_benchmark_trials.json
benchmark/results/android_release_t1_token_count_s10_smoke_debug4/: comparison.md  flutter_kiwi_benchmark.json  flutter_kiwi_benchmark_trials.json  kiwipiepy_benchmark.json  kiwipiepy_benchmark_trials.json
benchmark/results/android_release_t3_token_count_batch_s10_v1/: comparison.md  flutter_kiwi_benchmark.json  flutter_kiwi_benchmark_trial_01.json  flutter_kiwi_benchmark_trial_02.json  flutter_kiwi_benchmark_trials.json  kiwipiepy_benchmark.json  kiwipiepy_benchmark_trial_01.json  kiwipiepy_benchmark_trial_02.json  kiwipiepy_benchmark_trials.json
benchmark/results/gold_eval/: comparison.md  (+6 more)
doc/: medium_flutter_kiwi_nlp_deep_dive_en.md  medium_flutter_kiwi_nlp_deep_dive_ko.md  neurips_review_v2.md  review_feedback.md  technical_report_arxiv.tex  technical_report_arxiv.txt
example/: README.md  pubspec.yaml
example/assets/: benchmark_corpus_ko.txt
example/integration_test/: kiwi_acceptance_flow_test.dart  kiwi_native_runtime_path_test.dart  kiwi_runtime_smoke_test.dart
example/lib/: benchmark_main.dart  gold_eval_main.dart  main.dart
example/linux/: CMakeLists.txt
example/test/: _web_runtime_probe.dart  _web_runtime_probe_stub.dart  _web_runtime_probe_web.dart  kiwi_ui_golden_test.dart  kiwi_web_smoke_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
ios/: flutter_kiwi_ffi.podspec  flutter_kiwi_nlp.podspec
ios/Classes/: flutter_kiwi_ffi.c
lib/: flutter_kiwi_ffi.dart  flutter_kiwi_ffi_bindings_generated.dart  flutter_kiwi_ffi_web.dart  flutter_kiwi_nlp.dart  flutter_kiwi_nlp_web.dart
lib/src/: kiwi_analyzer_native.dart  kiwi_analyzer_stub.dart  kiwi_analyzer_web.dart  kiwi_exception.dart  kiwi_model_assets.dart  kiwi_options.dart  kiwi_types.dart
linux/: CMakeLists.txt
macos/: flutter_kiwi_ffi.podspec  flutter_kiwi_nlp.podspec
macos/Classes/: flutter_kiwi_ffi.c
skills/arxiv-paper-search/: SKILL.md
skills/flutter-kiwi-nlp/: SKILL.md
src/: CMakeLists.txt  flutter_kiwi_ffi.c  flutter_kiwi_ffi.h
test/: generated_native_bindings_adapter_test.dart  kiwi_analyzer_native_test.dart  kiwi_analyzer_stub_test.dart  kiwi_exception_test.dart  kiwi_ffi_bindings_generated_test.dart  kiwi_model_assets_test.dart  kiwi_options_test.dart  kiwi_public_api_test.dart  kiwi_types_test.dart
tool/: build_android_libkiwi.sh  build_ios_kiwi_xcframework.sh  build_linux_libkiwi.sh  build_macos_kiwi_dylib.sh  build_windows_kiwi_dll.ps1  check_coverage.sh  fetch_kiwi_release_assets.sh
tool/benchmark/: collect_wrapper_activity.py  compare_results.py  gold_corpus_compare.py  kiwipiepy_benchmark.py  run_compare.py
windows/: CMakeLists.txt
(+298 files in other folders)
